--- a/modules/tasks/client/apps/public-comment-vetting/public-comment-vetting.html
+++ b/modules/tasks/client/apps/public-comment-vetting/public-comment-vetting.html
@@ -4,10 +4,10 @@
 	</div>
 	<div class="panel-sub-heading">
 		<div class="btn-group btn-group-justified" ng-init="taskPubComVet.filter = 'Unvetted'">
-			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Unvetted'}"		ng-click="taskPubComVet.filter = 'Unvetted'">Unvetted ({{ (taskPubComVet.data.comments | filter:{overallStatus: 'Unvetted'}:true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
-			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Published'}"		ng-click="taskPubComVet.filter = 'Published'">Published ({{ (taskPubComVet.data.comments | filter:{overallStatus: 'Published'}:true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
-			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Rejected'}"		ng-click="taskPubComVet.filter = 'Rejected'">Rejected ({{ (taskPubComVet.data.comments | filter:{overallStatus: 'Rejected'}:true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
-			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Deferred'}"		ng-click="taskPubComVet.filter = 'Deferred'">Deferred ({{ (taskPubComVet.data.comments | filter:{overallStatus: 'Deferred'} :true| filter:taskPubComVet.filterKeyword).length || 0 }})</a>
+			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Unvetted'}"		ng-click="taskPubComVet.filter = 'Unvetted'">Unvetted ({{ (taskPubComVet.data.comments | filter:{eaoStatus: 'Unvetted'}:true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
+			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Published'}"		ng-click="taskPubComVet.filter = 'Published'">Published ({{ (taskPubComVet.data.comments | filter:{eaoStatus: 'Published'}:true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
+			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Rejected'}"		ng-click="taskPubComVet.filter = 'Rejected'">Rejected ({{ (taskPubComVet.data.comments | filter:{eaoStatus: 'Rejected'}:true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
+			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Deferred'}"		ng-click="taskPubComVet.filter = 'Deferred'">Deferred ({{ (taskPubComVet.data.comments | filter:{eaoStatus: 'Deferred'} :true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
 		</div>
 	</div>
 
@@ -34,7 +34,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr ng-repeat="com in filteredComments = (taskPubComVet.data.comments | filter:{overallStatus: taskPubComVet.filter}:true | filter:taskPubComVet.filterKeyword) track by $index" ng-class="{'bg-warning':$first}">
+			<tr ng-repeat="com in filteredComments = (taskPubComVet.data.comments | filter:{eaoStatus: taskPubComVet.filter}:true | filter:taskPubComVet.filterKeyword) track by $index" ng-class="{'bg-warning':$first}">
 
 				<td width="60%" ng-if="$first"><small>{{ com.dateAdded | amDateFormat:'MMM Do, YYYY hh:mm a'}}</small><br/><small>{{ com.author }}</small>
 				<div ng-bind-html="com.comment | safeHtml"></div>
@@ -45,16 +45,16 @@
 					<ul class="list-unstyled document-vetting no-lower-margin">
 						<li class="clearfix"><small>Overall Comment</small>
 							<div class="btn-group btn-group-xs pull-right">
-								<a href class="btn btn-default" ng-class="{'btn-success': com.eaoStatus === 'Published'}"	ng-click="com.eaoStatus = 'Published'">Accept</a>
+								<a href class="btn btn-default" ng-class="{'btn-success': com.eaoStatus === 'Published'}"		ng-click="com.eaoStatus = 'Published'">Accept</a>
 								<a href class="btn btn-default" ng-class="{'btn-danger': com.eaoStatus === 'Rejected'}"		ng-click="com.eaoStatus = 'Rejected'">Reject</a>
-								<a href class="btn btn-default" ng-class="{'btn-info': com.eaoStatus === 'Deferred'}"		ng-click="com.eaoStatus = 'Deferred'">Defer</a>
+								<a href class="btn btn-default" ng-class="{'btn-info': com.eaoStatus === 'Deferred'}"		ng-click="taskPubComVet.setCommentDefer(com);">Defer</a>
 							</div>
 						</li>
 						<li class="clearfix" ng-repeat="doc in com.documents">
 							<a href="{{ doc.url }}" target="_new" class="small">{{ doc.name }}</a>
 							<div class="btn-group btn-group-xs pull-right">
 								<a href class="btn btn-default" ng-class="{'btn-success': doc.status === 'Published'}"	ng-click="doc.status = 'Published'">Accept</a>
-								<a href class="btn btn-default" ng-class="{'btn-danger': doc.status === 'Rejected'}"	ng-click="doc.status = 'Rejected'">Reject</a>
+								<a href class="btn btn-default" ng-class="{'btn-danger': doc.status === 'Rejected'}"		ng-click="doc.status = 'Rejected'">Reject</a>
 								<a href class="btn btn-default" ng-class="{'btn-info': doc.status === 'Deferred'}"		ng-click="doc.status = 'Deferred'">Defer</a>
 							</div>
 						</li>
