Project List navigation and comment vetting

--- a/modules/tasks/client/apps/public-comment-vetting/public-comment-vetting.html
+++ b/modules/tasks/client/apps/public-comment-vetting/public-comment-vetting.html
@@ -78,7 +78,7 @@
 	</table>
 
 	<div class="panel-footer text-right">
-		98 Comments Remaining
+		{{ taskPubComVet.unvettedCount || 0 }} Comments Remaining
 	</div>
 
 </div>
