--- a/modules/tasks/client/apps/public-comment-vetting/public-comment-vetting.html
+++ b/modules/tasks/client/apps/public-comment-vetting/public-comment-vetting.html
@@ -3,11 +3,11 @@
 		Public Comments Vetting: {{ taskPubComVet.task.name }} <em class="small pull-right">{{ taskPubComVet.task.status }}</em>
 	</div>
 	<div class="panel-sub-heading">
-		<div class="btn-group btn-group-justified" ng-init="taskPubComVet.filter = 'In Progress'">
-			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'In Progress'}"	ng-click="taskPubComVet.filter = 'In Progress'">Unvetted ({{ (taskPubComVet.data.comments | filter:{overallStatus: 'In Progress'}:true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
-			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Published'}"		ng-click="taskPubComVet.filter = 'Published'">Published ({{ (taskPubComVet.data.comments | filter:{overallStatus: 'Published'}:true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
-			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Rejected'}"		ng-click="taskPubComVet.filter = 'Rejected'">Rejected ({{ (taskPubComVet.data.comments | filter:{overallStatus: 'Rejected'}:true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
-			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Deferred'}"		ng-click="taskPubComVet.filter = 'Deferred'">Deferred ({{ (taskPubComVet.data.comments | filter:{overallStatus: 'Deferred'} :true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
+		<div class="btn-group btn-group-justified" ng-init="taskPubComVet.filter = 'Unvetted'">
+			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Unvetted'}"	ng-click="taskPubComVet.filter = 'Unvetted'">Unvetted ({{ (taskPubComVet.data.comments | filter:{eaoStatus: 'Unvetted'}:true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
+			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Published'}"		ng-click="taskPubComVet.filter = 'Published'">Published ({{ (taskPubComVet.data.comments | filter:{eaoStatus: 'Published'}:true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
+			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Rejected'}"		ng-click="taskPubComVet.filter = 'Rejected'">Rejected ({{ (taskPubComVet.data.comments | filter:{eaoStatus: 'Rejected'}:true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
+			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Deferred'}"		ng-click="taskPubComVet.filter = 'Deferred'">Deferred ({{ (taskPubComVet.data.comments | filter:{eaoStatus: 'Deferred'} :true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
 		</div>
 	</div>
 
@@ -34,20 +34,21 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr ng-repeat="com in filteredComments = (taskPubComVet.data.comments | filter:{overallStatus: taskPubComVet.filter}:true | filter:taskPubComVet.filterKeyword) track by $index" ng-class="{'bg-warning':$first}">
+			<tr ng-repeat="com in filteredComments = (taskPubComVet.data.comments | filter:{eaoStatus: taskPubComVet.filter}:true | filter:taskPubComVet.filterKeyword) track by $index" ng-class="{'bg-warning':taskPubComVet.activeCommentId === com._id}">
 
-				<td width="60%" ng-if="$first"><small>{{ com.dateAdded | amDateFormat:'MMM Do, YYYY hh:mm a'}}</small><br/><small>{{ com.author }}</small>
-				<div ng-bind-html="com.comment | safeHtml"></div>
+				<td width="60%" ng-if="taskPubComVet.activeCommentId === com._id"><small>{{ com.dateAdded | amDateFormat:'MMM Do, YYYY hh:mm a'}}</small><br/><small>{{ com.author }}</small>
+					<div ng-bind-html="com.comment | safeHtml"></div>
 				</td>
 
-				<td width="40%" ng-if="$first">
+				<td width="40%" ng-if="taskPubComVet.activeCommentId === com._id">
 
 					<ul class="list-unstyled document-vetting no-lower-margin">
 						<li class="clearfix"><small>Overall Comment</small>
 							<div class="btn-group btn-group-xs pull-right">
-								<a href class="btn btn-default" ng-class="{'btn-success': com.eaoStatus === 'Published'}"		ng-click="com.eaoStatus = 'Published'">Accept</a>
-								<a href class="btn btn-default" ng-class="{'btn-danger': com.eaoStatus === 'Rejected'}"		ng-click="com.eaoStatus = 'Rejected'">Reject</a>
-								<a href class="btn btn-default" ng-class="{'btn-info': com.eaoStatus === 'Deferred'}"		ng-click="com.eaoStatus = 'Deferred'">Defer</a>
+								<a href class="btn btn-default" ng-class="{'btn-success': taskPubComVet.workingStatus === 'Published'}"		ng-click="taskPubComVet.workingStatus = 'Published'">Accept</a>
+								<a href class="btn btn-default" ng-class="{'btn-danger': taskPubComVet.workingStatus === 'Rejected'}"		ng-click="taskPubComVet.workingStatus = 'Rejected'">Reject</a>
+								<a href class="btn btn-default" ng-class="{'btn-info': taskPubComVet.workingStatus === 'Deferred'}"			ng-click="taskPubComVet.workingStatus = 'Deferred'">Defer</a>
+								<a href class="btn btn-default" ng-class="{'btn-warning': taskPubComVet.workingStatus === 'Spam'}"			ng-click="taskPubComVet.workingStatus = 'Spam'">Spam</a>
 							</div>
 						</li>
 						<li class="clearfix" ng-repeat="doc in com.documents">
@@ -59,14 +60,14 @@
 							</div>
 						</li>
 						<li class="text-right">
-							<a href class="btn-link btn" ng-click='taskPubComVet.finalizeCommentStatus(com)' ng-disabled="com.status === 'Unvetted'">Next Comment <span class="glyphicon glyphicon-chevron-right"></span></a>
+							<a href class="btn-link btn" ng-click='taskPubComVet.finalizeCommentStatus(com)' ng-disabled="!taskPubComVet.workingStatus">Next Comment <span class="glyphicon glyphicon-chevron-right"></span></a>
 						</li>
 					</ul>
 
 				</td>
 
 
-				<td width="100%" colspan="2" ng-if="!$first" class="text-muted">
+				<td width="100%" colspan="2" ng-if="taskPubComVet.activeCommentId !== com._id" class="text-muted clickable" ng-click="taskPubComVet.activeCommentId = com._id">
 					<div ng-bind-html="com.comment | safeHtml | max15Words"></div>
 				</td>
 
