--- a/modules/tasks/client/apps/set-phase/set-phase.html
+++ b/modules/tasks/client/apps/set-phase/set-phase.html
@@ -4,7 +4,7 @@
 	</div>
 	<div class="panel-body">
 		<div class="pull-right">
-			<select class="form-control" ng-model="taskSetPhase.project.currentPhase" ng-options="phase as phase.name for phase in taskSetPhase.project.phases track by phase.name"></select>
+			<select class="form-control" ng-model="taskSetPhase.newPhase" ng-options="phase as phase.name for phase in taskSetPhase.project.phases"></select>
 		</div>
 		<p>{{ taskSetPhase.task.description }}</p>
 	</div>
