Comment Vetting Fixes. Document Upload improvements. Sending comment triggers document upload now.

--- a/modules/tasks/client/apps/manage-comments/manage-comments.html
+++ b/modules/tasks/client/apps/manage-comments/manage-comments.html
@@ -34,7 +34,7 @@
 				<td>
 					<div ng-show="taskManComm.activeComments[com._id]">
 						{{ com.comment | safeHtml }}<br>
-						{{ com.buckets | json }}
+						{{ com.documents | json }}
 					</div>
 					<div ng-show="!taskManComm.activeComments[com._id]">
 						{{ com.comment | safeHtml | max15Words }}
