--- a/modules/tasks/client/apps/public-comment-classification-proponent/public-comment-classification-proponent.html
+++ b/modules/tasks/client/apps/public-comment-classification-proponent/public-comment-classification-proponent.html
@@ -89,9 +89,11 @@
 				<td width="58%" ng-if="taskPubComClassProp.activeComment._id === com._id"><small>{{ com.dateAdded | amDateFormat:'MMM Do, YYYY hh:mm a'}}</small><br/><small>{{ com.author }}</small>
 					<div ng-bind-html="com.comment | safeHtml "></div>
 					<hr>
+
 					<ul class="list-unstyled document-vetting">
 						<li ng-repeat="doc in com.documents">
-							<a href="{{ doc.url }}" target="_new" class="small"><span class="glyphicon glyphicon-file"></span> {{ doc.name }}</a>
+							<a href="{{ doc.url }}" target="_new" class="small" ng-if="doc.eaoStatus !== 'Rejected'"><span class="glyphicon glyphicon-file"></span> {{ doc.name }}</a>
+							<span class="small text-warning" ng-if="doc.eaoStatus === 'Rejected'"><i class="glyphicon glyphicon-file"></i> {{ doc.name }} has not been shared as it does not meet the privacy policy rules.</span>
 						</li>
 						<li ng-if="com.documents.length === 0">
 							There are no documents associated with this comment.
@@ -126,10 +128,10 @@
 						</ul>
 					</div>
 
-					<label class="control-label">
+					<label class="control-label" ng-if='0'>
 						Topics
 					</label>
-					<div class="well well-sm clickable">
+					<div class="well well-sm clickable" ng-if='0'>
 						<ul class="list-unstyled task-list"
 							x-modal-select-items
 							x-unique="true"
@@ -150,7 +152,7 @@
 						</ul>
 					</div>
 
-					<div ng-show="taskPubComClassProp.noClassificationPossible">
+					<div ng-show="taskPubComClassProp.noClassificationPossible || com.proponentNotes">
 						<label class="control-label">
 							Reason for No Classification
 						</label>
