--- a/modules/tasks/client/apps/public-comment-vetting/public-comment-vetting.html
+++ b/modules/tasks/client/apps/public-comment-vetting/public-comment-vetting.html
@@ -5,9 +5,10 @@
 	<div class="panel-sub-heading">
 		<div class="btn-group btn-group-justified" ng-init="taskPubComVet.filter = 'Unvetted'">
 			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Unvetted'}"	ng-click="taskPubComVet.filter = 'Unvetted'">Unvetted ({{ (taskPubComVet.data.comments | filter:{eaoStatus: 'Unvetted'}:true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
-			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Published'}"		ng-click="taskPubComVet.filter = 'Published'">Published ({{ (taskPubComVet.data.comments | filter:{eaoStatus: 'Published'}:true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
-			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Rejected'}"		ng-click="taskPubComVet.filter = 'Rejected'">Rejected ({{ (taskPubComVet.data.comments | filter:{eaoStatus: 'Rejected'}:true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
-			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Deferred'}"		ng-click="taskPubComVet.filter = 'Deferred'">Deferred ({{ (taskPubComVet.data.comments | filter:{eaoStatus: 'Deferred'} :true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
+			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Published'}"	ng-click="taskPubComVet.filter = 'Published'">Published ({{ (taskPubComVet.data.comments | filter:{eaoStatus: 'Published'}:true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
+			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Rejected'}"	ng-click="taskPubComVet.filter = 'Rejected'">Rejected ({{ (taskPubComVet.data.comments | filter:{eaoStatus: 'Rejected'}:true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
+			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Spam'}"		ng-click="taskPubComVet.filter = 'Spam'">Spam ({{ (taskPubComVet.data.comments | filter:{eaoStatus: 'Spam'} :true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
+			<a href class="btn btn-default btn-sm" ng-class="{'btn-success': taskPubComVet.filter === 'Deferred'}"	ng-click="taskPubComVet.filter = 'Deferred'">Deferred ({{ (taskPubComVet.data.comments | filter:{eaoStatus: 'Deferred'} :true | filter:taskPubComVet.filterKeyword).length || 0 }})</a>
 		</div>
 	</div>
 
@@ -54,9 +55,9 @@
 						<li class="clearfix" ng-repeat="doc in com.documents">
 							<a href="{{ doc.url }}" target="_new" class="small">{{ doc.name }}</a>
 							<div class="btn-group btn-group-xs pull-right">
-								<a href class="btn btn-default" ng-class="{'btn-success': doc.status === 'Published'}"	ng-click="doc.status = 'Published'">Accept</a>
-								<a href class="btn btn-default" ng-class="{'btn-danger': doc.status === 'Rejected'}"		ng-click="doc.status = 'Rejected'">Reject</a>
-								<a href class="btn btn-default" ng-class="{'btn-info': doc.status === 'Deferred'}"		ng-click="doc.status = 'Deferred'">Defer</a>
+								<a href class="btn btn-default" ng-class="{'btn-success': doc.eaoStatus === 'Published'}"	ng-click="doc.eaoStatus = 'Published'">Accept</a>
+								<a href class="btn btn-default" ng-class="{'btn-danger': doc.eaoStatus === 'Rejected'}"	ng-click="doc.eaoStatus = 'Rejected'">Reject</a>
+								<a href class="btn btn-default" ng-class="{'btn-info': doc.eaoStatus === 'Deferred'}"	ng-click="doc.eaoStatus = 'Deferred'">Defer</a>
 							</div>
 						</li>
 						<li class="text-right">
