JS Lint Fix.  Public page formatting for ajax

--- a/modules/tasks/client/apps/notifications/notifications.html
+++ b/modules/tasks/client/apps/notifications/notifications.html
@@ -66,7 +66,7 @@
 			<!-- Recipients -->
 			<div class="row">
 				<div class="col-sm-12 text-right small">
-					<a href x-modal-select-users x-users="taskNotifications.customRecipients" x-project="taskNotifications.project">Add Recipients</a> | <a href x-modal-user-list x-users="taskNotifications.mailOut">Get Addresses</a>
+					<a href x-modal-select-users x-users="taskNotifications.customRecipients" x-project="taskNotifications.project">Add Recipients</a> | <a href x-modal-recipient-list x-users="taskNotifications.mailOut">Get Addresses</a>
 				</div>
 			</div>
 			<div class="row" ng-repeat="(role, list) in taskNotifications.recipients">
